drive: add cache test
Change-Id: I12a74024d26355c1eeac01b5c05ef1cbbc1c8505