@@ -17,6 +17,7 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'hugo'
+apply plugin: 'robolectric'
 
 // Versioning
 def versionMajor = 0
@@ -80,6 +81,21 @@ android {
     }
 }
 
+robolectric {
+    include '**/*Test.class'
+}
+// hack for robolectric
+// https://github.com/JakeWharton/gradle-android-test-plugin/issues/54
+tasks.whenTaskAdded { task ->
+    if (task.name == 'testDebug') {
+        task.jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
+        // use afterTest to listen to the test execution results
+        afterTest { descriptor, result ->
+            println "Executing test for {$descriptor.name} with result: ${result.resultType}"
+        }
+    }
+}
+
 dependencies {
     compile 'com.jakewharton:butterknife:5.1.0'
 
@@ -98,4 +114,26 @@ dependencies {
     compile 'com.google.android.gms:play-services:6.1.71'
 
     compile project(':common')
+
+
+    androidTestCompile('junit:junit:4.11')
+    androidTestCompile('org.robolectric:robolectric:2.3') {
+        exclude module: 'classworlds'
+        exclude module: 'commons-logging'
+        exclude module: 'httpclient'
+        exclude module: 'maven-artifact'
+        exclude module: 'maven-artifact-manager'
+        exclude module: 'maven-error-diagnostics'
+        exclude module: 'maven-model'
+        exclude module: 'maven-project'
+        exclude module: 'maven-settings'
+        exclude module: 'plexus-container-default'
+        exclude module: 'plexus-interpolation'
+        exclude module: 'plexus-utils'
+        exclude module: 'wagon-file'
+        exclude module: 'wagon-http-lightweight'
+        exclude module: 'wagon-provider-api'
+    }
+    androidTestCompile('com.squareup:fest-android:1.0.0')
+    androidTestCompile('org.mockito:mockito-core:1.10.0')
 }
